--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,5 +12,5 @@
 </ng-template>
 
 
-<p [ngStyle]="{backgroundColor: getColor()}">Dummy text</p>
+<p [ngStyle]="{backgroundColor: getColor()}" [ngClass]="{textHighlighted: username === 'Damian'}">Dummy text</p>
 
