--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,17 @@
-<p>header works!</p>
+<div class="mat-tab-nav-bar">
+  <div class="navbar-wrapper">
+    <ul>
+      <li><a href="#">Recipes</a></li>
+      <li><a href="#">Shopping List</a></li>
+    </ul>
+    <ul>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" role="button">Manage</a>
+      <ul class="dropdown-menu">
+        <li><a href="#">Save Data</a></li>
+        <li><a href="#">Fetch Data</a></li>
+      </ul>
+      </li>
+    </ul>
+  </div>
+</div>
