--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,9 @@
-<p>1 Add a Input field which updates a property ('username') via Two-Way-Binding</p>
-<p>2 Output the username property via String Interpolation (in a paragraph below the input)</p>
-<p>3 Add a button which may only be clicked if the username is NOT an empty string</p>
-<p>4 Upon clicking the button, the username should be reset to an empty string</p>
+<app-cockpit
+  (serverCreated)="onServerAdded($event)"
+  (bluePrintCreated)="onBlueprintAdded($event)"
+></app-cockpit>
 
-<input type="text" [(ngModel)]="username">
-<p> {{ username }}</p>
-<button type="button" (click)="clearUsername()" [disabled]="username === ''">Click me!</button>
-<p *ngIf="isCreated; else noName">User is Created {{ username }}</p>
-<ng-template #noName>
-  <p>Is CREATED!</p>
-</ng-template>
-
-
-<p [ngStyle]="{backgroundColor: getColor()}" [ngClass]="{'text-highlighted': username === 'Damian'}">Dummy text</p>
-
+<app-server-element
+  *ngFor="let serverElement of serverElements"
+  [element]="serverElement">
+</app-server-element>
