--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <div class="mat-tab-nav-bar">
   <div class="navbar-wrapper">
     <ul>
-      <li><a href="#">Recipes</a></li>
-      <li><a href="#">Shopping List</a></li>
+      <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
+      <li><a href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
     </ul>
     <ul>
       <li class="dropdown">
