--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header (featureSelected)="onNavigate($event)"></app-header>
 <div class="container">
   <app-recipes *ngIf="loadedFeature === 'recipe'"></app-recipes>
-  <app-shopping-edit *ngIf="loadedFeature !== 'recipe'"></app-shopping-edit>
+  <app-shopping-list *ngIf="loadedFeature !== 'recipe'"></app-shopping-list>
 </div>
