--- a/src/app/components/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/components/recipes/recipes-list/recipes-list.component.html
@@ -5,17 +5,11 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <a href="#" class="list-group-item clearfix" *ngFor="let recipe of recipes">
-      <div class="pull-left">
-        <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
-        <p class="list-group-item-text">{{ recipe.description }}</p>
-      </div>
-      <span class="pull-right">
-        <img [src]="recipe.imagePath" alt="{{ recipe.name }}" style="max-height: 50px;">
-      </span>
-
-    </a>
-    <app-recipes-item></app-recipes-item>
+    <app-recipes-item
+      *ngFor="let recipe of recipes"
+      [recipe]="recipe"
+      (recipeSelected)="onRecipeSelected(recipe)">
+    </app-recipes-item>
   </div>
 </div>
 
