[Directive] Pass parameters to tag from directive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <p appBasicHighlight>Styling me with basic directive!</p>
-<p appBetterHighlight>Styling me with basic directive!</p>
+<p appBetterHighlight [defaultColor]="'yellow'" [highlightColor]="'red'">Styling me with basic directive!</p>
