[Structural Directive] Declared own structural directive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <p appBasicHighlight>Styling me with basic directive!</p>
 <p appBetterHighlight [defaultColor]="'yellow'" [highlightColor]="'red'">Styling me with basic directive!</p>
+
+
+<!--<div *appUnless=""></div>-->
