Adding dropdown directive to project

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,12 +5,12 @@
       <li><a href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
     </ul>
     <ul>
-      <li class="dropdown">
+      <li class="dropdown" appDropdown>
         <a href="#" class="dropdown-toggle" role="button">Manage</a>
-      <ul class="dropdown-menu">
-        <li><a href="#">Save Data</a></li>
-        <li><a href="#">Fetch Data</a></li>
-      </ul>
+        <ul class="dropdown-menu">
+          <li><a href="#">Save Data</a></li>
+          <li><a href="#">Fetch Data</a></li>
+         </ul>
       </li>
     </ul>
   </div>
