--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,8 @@
               name="email"
               required
               email
-            >
+              #email="ngModel"
+            ><span class="help-block" *ngIf="!email.valid && email.touched">Please enter a valid email!</span>
           </div>
         </div>
         <div class="form-group">
@@ -33,13 +34,22 @@
           <select
             id="secret"
             class="form-control"
-            ngModel
+            [ngModel]="defaultQuestion"
             name="secret">
             <option value="pet">Your first Pet?</option>
             <option value="teacher">Your first teacher?</option>
           </select>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <textarea
+          name="questionAnswer"
+          rows="3"
+          [(ngModel)]="answer"
+        ></textarea>
+        <p>Your reply: {{ answer }}</p>
+        <button
+          class="btn btn-primary"
+          type="submit"
+          [disabled]="!form.valid">Submit</button>
       </form>
     </div>
   </div>
