--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <form (ngSubmit)="onSubmit()" #form="ngForm">
         <div id="user-data"
              ngModelGroup="userData"
-              #userData="ngModelGroup">
+             #userData="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
             <input
@@ -16,7 +16,7 @@
               required
             >
           </div>
-          <button class="btn btn-default" type="button">Suggest an Username</button>
+          <button class="btn btn-default" type="button" (click)="suggestUserName()">Suggest an Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
             <input
@@ -49,10 +49,19 @@
           [(ngModel)]="answer"
         ></textarea>
         <p>Your reply: {{ answer }}</p>
+        <div class="radio" *ngFor="let gender of genders">
+          <label>
+            <input type="radio"
+                   name="gender"
+                   ngModel
+                   [value]="gender"> {{ gender }}
+          </label>
+        </div>
         <button
           class="btn btn-primary"
           type="submit"
-          [disabled]="!form.valid">Submit</button>
+          [disabled]="!form.valid">Submit
+        </button>
       </form>
     </div>
   </div>
