--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,4 +65,14 @@
       </form>
     </div>
   </div>
+  <hr>
+  <div class="row" *ngIf="submitted">
+    <h3>Your Data</h3>
+    <p>Username: {{ user.username }}</p>
+    <p>Mail: {{ user.email }}</p>
+    <p>Secret question: {{ user.secretQuestion }} </p>
+    <p>Answer: {{ user.answer }}</p>
+    <p>Gender: {{ user.gender }}</p>
+
+  </div>
 </div>
