--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+        <div formGroupName="userData">
         <div class="form-group">
           <label for="username">Username</label>
           <input
@@ -9,6 +10,10 @@
             id="username"
             formControlName="username"
             class="form-control">
+            <!--#username="ngModel" Doesn't because it cannot use ngModel-->
+          <span
+            *ngIf="!signupForm.get('userData.username').valid && signupForm.get('userData.username').touched"
+            class="help-block">Please enter a valid username!</span>
         </div>
         <div class="form-group">
           <label for="email">email</label>
@@ -17,6 +22,10 @@
             id="email"
             formControlName="email"
             class="form-control">
+          <span
+            *ngIf="!signupForm.get('userData.email').valid && signupForm.get('userData.email').touched"
+            class="help-block">Please enter a valid email!</span>
+        </div>
         </div>
         <div class="radio" *ngFor="let gender of genders">
           <label>
@@ -26,6 +35,9 @@
               [value]="gender">{{ gender }}
           </label>
         </div>
+        <span
+          *ngIf="!signupForm.valid && signupForm.touched"
+          class="help-block">Please enter a valid data!</span>
         <button class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
