[Reactive Forms] FormArray - dynamic added elements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,15 @@
               [value]="gender">{{ gender }}
           </label>
         </div>
+        <div formArrayName="hobbies">
+          <h4>Your hobbies</h4>
+          <button type="button" (click)="onAddHobby()">Add Hobby</button>
+          <div
+            *ngFor="let hobbyControl of getControls(); let i = index"
+          >
+            <input type="text" [formControlName]="i">
+          </div>
+        </div>
         <span
           *ngIf="!signupForm.valid && signupForm.touched"
           class="help-block">Please enter a valid data!</span>
