--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,13 @@
   </div>
   <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-      <p>No posts available!</p>
+      <p *ngIf="loadedPosts.length < 1">No posts available!</p>
+      <ul *ngIf="loadedPosts.length >= 1">
+        <li *ngFor="let item of loadedPosts">
+          <h1>{{ item.title }}</h1>
+          <p>{{ item.content }}</p>
+        </li>
+      </ul>
     </div>
   </div>
 </div>
