--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,13 +51,14 @@
   </div>
   <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-      <p *ngIf="loadedPosts.length < 1">No posts available!</p>
-      <ul *ngIf="loadedPosts.length >= 1">
+      <p *ngIf="loadedPosts.length < 1 && !isFetching">No posts available!</p>
+      <ul *ngIf="loadedPosts.length >= 1 && !isFetching">
         <li *ngFor="let item of loadedPosts">
           <h1>{{ item.title }}</h1>
           <p>{{ item.content }}</p>
         </li>
       </ul>
+      <p *ngIf="isFetching">Loading...</p>
     </div>
   </div>
 </div>
