--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
             {{ server.status }}
           </span>
           <strong>{{ server.name }}</strong> |
-          {{ server.instanceType | uppercase | shortenpipe }} |
+          {{ server.instanceType | uppercase | shortenpipe:3 }} |
           {{ server.started | date:'fullDate' | uppercase }}
         </li>
       </ul>
