--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
       <input type="text" [(ngModel)]="filteredStatus">
       <br>
       <button class="btn btn-primary" (click)="onAddServer()">Add Server</button>
+      <h2>App Status: {{ appStatus | async }}</h2>
       <ul class="list-group">
         <li
           class="list-group-item"
